// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dungeon renders DungeonAfterBattle component on battle victory state: DungeonAfterBattle 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed full-page scrollable dungeon-container"
      style="background-image: url(test-file-stub); background-repeat: no-repeat; background-size: cover; background-position: bottom;"
    >
      <h1>
        Stage 
        1
      </h1>
      <div
        class="action-buttons-container"
      >
        <button
          class="rpgui-button btn"
        >
          Escape
        </button>
        <button
          class="rpgui-button btn"
        >
          Next Stage
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Dungeon renders DungeonBeforeBattle component on encounter state: DungeonBeforeBattle 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed full-page scrollable dungeon-container"
      style="background-image: url(test-file-stub); background-repeat: no-repeat; background-size: cover; background-position: bottom;"
    >
      <h1>
        Stage 
        1
      </h1>
      <button
        class="rpgui-button btn"
      >
        Start Battle
      </button>
    </div>
  </div>
</body>
`;

exports[`Dungeon renders DungeonInBattle component on battle state: DungeonInBattle 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed full-page scrollable dungeon-container"
      style="background-image: url(test-file-stub); background-repeat: no-repeat; background-size: cover; background-position: bottom;"
    >
      <div
        class="progress-container"
      >
        <p
          class="hint-text"
        >
          Your 
           HP 
          /
        </p>
        <div
          class="rpgui-progress"
          data-rpguitype="progress"
        >
          <div
            class=" rpgui-progress-track"
          >
            <div
              class="rpgui-progress-fill red progress-animation"
              style="left: 0px;"
            />
          </div>
          <div
            class=" rpgui-progress-left-edge"
          />
          <div
            class=" rpgui-progress-right-edge"
          />
        </div>
      </div>
      <div
        class="combat-control-container"
      >
        <button
          class="attack-button"
        >
          <div
            class="cooldown-container"
            style="width: 61px; visibility: hidden;"
          />
          <div
            class="rpgui-container container framed framed-golden-2 attack-container"
          >
            <img
              alt="Base Attack"
              class="attack-icon"
              src="test-file-stub"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Dungeon renders without crashing: Dungeon 1`] = `
<body>
  <div>
    <div
      class="rpgui-container container framed full-page scrollable dungeon-container"
      style="background-image: url(test-file-stub); background-repeat: no-repeat; background-size: cover; background-position: bottom;"
    >
      <h1>
        Stage 
        1
      </h1>
      <button
        class="rpgui-button btn"
      >
        Start Battle
      </button>
    </div>
  </div>
</body>
`;
